(Struct) Migrate from gin to echo
